style.css
body {
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-weight: 500;
    margin: 0;
}

.container {
    display: grid;
    grid-template-columns: 1fr 6fr; 
    grid-template-rows: 1fr 7fr;
}

.header {
    grid-column: 2;
    display: grid;
    grid-template-columns: 2fr 1fr;
    align-items: center;
    padding: 10px 60px 20px 60px;
}

.search, .user {
    margin-bottom: 30px;
}

.search {
    grid-column: 1;
    display: flex;
    align-items: center;
}

.magnify, 
.bell {
    width: 25px;
    height: 25px;
}

.magnify:hover,
.bell:hover {
    transform: scale(1.1);
    cursor: pointer;
}

.field {
    outline: none;
    border: none;
    border-radius: 16px;
    background-color: #e5e7eb;
    width: 600px;
    height: 28px;
    padding-left: 15px;
    margin-left: 10px;
}

.user {
    grid-column: 2;
    display: flex;
    align-items: center;
    justify-self: right;
    gap: 30px;
    font-size: 12px;
}

.profile-pic {
    border-radius: 40%;
    width: 50px;
}

.profile-pic:hover {
    transform: scale(1.05);
    cursor: pointer;
}

.welcome {
    display: flex;
    align-items: center;
    gap: 20px;
}

.welcome-pic {
    border-radius: 50%;
    width: 60px;
}

.message {
    font-size: 16px;
}

.message > p, h3 {
    margin: 0;
}

.nav > ul {
    display: flex;
    list-style-type: none;
    justify-content: end;
    gap: 50px;
}

.nav li {
    color: white;
    font-weight: 700;
    background-color: #475569;
    width: 90px;
    height: 40px;
    border-radius: 20px;
    text-align: center;
    align-content: center;
}

.nav li:hover {
    background-color: #0ea5e9;
    transform: scale(1.05);
    cursor: pointer;
}

.dashboard {
    grid-column: 1;
    grid-row: 1 / 4;
    display: grid;
    background-color: #475569;
    color: white;
}

.dashboard > div {
    margin-left: 10px;
    display: grid;
    grid-template-columns: 0.5fr 2fr;
    grid-template-rows: auto;
}

.dashboard > div a, li {
    text-decoration: none;
    list-style: none;
    color: white;
}

.dashboard li:hover {
    transform: scale(1.05);
    background-color: #334155;
    border-radius: 8px;
    width: 160px;
}

.dashboard .icon {
    width: 25px;
    fill: white;
    margin: 0;
}

.upper {
    grid-row: 1;
    margin-top: 10px;
    gap: 10px;
}

.upper .logo {
    grid-column: 1;
    width: 50px;
    fill: white;
    margin: auto;
}

.dashboard ul {
    display: grid;
    padding: 0;
    row-gap: 15px;
}

.dashboard li {
    display: flex;
    align-items: center;
    gap: 20px;
}

.mid {
    grid-row: 2;
    margin-top: 20px;
    padding-left: 14px;
}

.bottom {
    grid-row: 3;
    gap: 5px;
    align-items: center;
    row-gap: 30px;
    margin-top: 80px;
    padding-left: 14px;
    padding-bottom: 100vh;
}

.content {
    grid-column: 2;
    display: grid;
    grid-template-columns: 4fr 1fr;
    align-content: space-between;
    background-color: #e2e8f0;
    box-shadow: inset 0 4px 14px -8px #020617;
}

.main {
    grid-column: 1;
    grid-row: 1;
    display: grid;
    grid-template-rows: 1fr 10fr;
    margin: 15px;
}

.title {
    grid-row: 1;
}

.grid {
    grid-row: 2;
    display: flex;
    flex-wrap: wrap;
    gap: 40px;
}

.grid .project {
    background-color: white;
    border-left: 8px solid;
    border-color: #0ea5e9;
    width: 350px; /* Temporary */
    height: 200px;
    border-radius: 10px;
    padding: 10px;
}

.grid .project:hover {
    transform: scale(1.05);
}

.project {
    display: flex;
    flex-wrap: wrap;
}

.project-icons {
    display: flex;
    margin: auto;
    justify-content: end;
}

.project-icons * {
    width: 8%;
}

